# portalmult

./: .gitignore  README.md  a.txt  app.py  find_file.sh  pyproject.toml  readme_portal.md  teste.py
auth/: config.py  dependencies.py  models.py  security.py  services.py
database/: database.py  roi_queries.py
middleware/: __init__.py  cors.py  logging.py  request_queue.py
models/2024-10-17-15-51-39/: config.json
models/2024-10-21-14-34-42/: config.json
routes/: __init__.py  auth_routes.py  donwload_sentinel_roi.py  draw_routes.py  login.py  map_routes.py  predict_routes.py  protected.py  roi_routes.py  shp_routes.py  usuario_routes.py  visualize_routes.py
security/: auth.py  rate_limiting.py  security.py
services/: __init__.py  band_calculator.py  band_downloader.py  earth_engine_initializer.py  earth_engine_processor.py  model_loader.py  shapefile_processor.py  tiff_processor.py  zip_creator.py
spin/: config.py  inference.py  model.py  plot.py
src/spin_susano.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
static/: index.html  login.html
static/css/: style.css
static/js/: apiHandlers.js  app.js  drawHandlers.js  mapControls.js
tests/: pred.py  predict_routes_test.py  predict_test.sh  rgb_route.sh  rgb_true.py  test_map_routes.py
um_dia_projeto_legal/: process_ndvi_ndwi.py
utils/: __init__.py  async_utils.py  data_range.py  exception_utils.py  geometry_utils.py  jwt_utils.py  logging.py  raster_utils.py  shapefile_utils.py  upload_utils.py  validators.py  zip_creator.py
(+4 files in other folders)
