[project]
name = "spin_susano"
version = "0.1.0"
requires-python = ">=3.8,<3.10"
dependencies = ["fastapi", "python-multipart", "uvicorn", "fastapi-structlog", "asgi-correlation-id", "pillow", "numpy<1.28", "tensorflow<2.11", "matplotlib", "scikit-learn", "rasterio"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"